LIST OF CHANGES
---------------

release 6.30.0
 - To help with detecting recent changes, add `last_changed` column
   to PacBio NPG tables and update relevant DBIx classes.
 - Updated DBIx classes from the prod database schema. Two types of changes:
      1. due to a aserver upgrade tp MySQL v.8+
      2. due to database schema changes.

release 6.29.1
 - Switch to Perlbrew to obtain multiple Perl versions

release 6.29.0
 - Add plate_number column to the pac_bio_run_well_metrics table and bring
   DBIx classes up to date.

release 6.28.0
 - Add get_tags methods to pac_bio_run and pac_bio_product_metrics table
   bindings
 - Add 3 columns to the pac_bio_run_well_metrics to store well level
   demultiplexing information.

release 6.27.0
 - Add column to the pac_bio_run_well_metrics to store the ccs dataset
   id for a sample well.

release 6.26.0
 - PacBio metrics tables:
     1. make product id columns not nullable since LangQC relies
        on these ids being available;
     2 set collation for product ids so that it is possible to easily join
       these tables to seq_product_irods_locations table.

release 6.25.0
 - Add columns to the pac_bio_run_well_metrics and pac_bio_product_metrics
   to store QC state for PacBio wells and products
 - Drop redundant index from the pac_bio_product_metrics table
 - Add a new table - gsu_sample_uploads

release 6.24.0
 - Updated the DBIx ORM binding
 - Set up indexes for PacBio tables to support queries from the LangQC
   web application
 - Update action versions in CI

release 6.23.0
 - Add a unique key across pac_bio_product_metrics foreign keys to prevent
   duplication of rows
 - Change CI runner from Ubuntu 18.04 to ubuntu-latest

release 6.22.0
 - Add id_pac_bio_product to pac_bio_product_metrics

release 6.21.0
 - Add run_transfer_complete date to pac_bio_run_well_metrics

release 6.20.1
 - Add new PacBio conf values to pac_bio_run_well_metrics
 - Add substitution metrics from C2A qc check to the iseq_product_metrics